<?xml version="1.0"?>
<package format="2">
  <name>my_new_robot_controller</name>
  <version>0.0.0</version>
  <description>move_rectangle</description>
  <maintainer email="thakursurendra3612@gmail.com">vboxuser</maintainer>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
